--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -19,11 +21,8 @@
 }
 
 body {
-  /* font-family: 'Roboto', sans-serif;
-  overflow-x: hidden; */
+
 }
-
-
 
 @layer utilities {
   .text-balance {
@@ -32,42 +31,44 @@ body {
 }
 
 @layer base {
-  *{
-    @apply font-Montserrat
+  * {
+    @apply font-montserrat;
   }
-  h1{
-    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-6xl
+  h1 {
+    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-6xl;
   }
-  h2{
-    @apply text-5xl
+  h2 {
+    @apply text-5xl;
   }
-  h3{
-    @apply  text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl
+  h3 {
+    @apply text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl;
   }
-  h4{
-    @apply text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl
+  h4 {
+    @apply text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl;
   }
-  h5{
-    @apply text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl
+  h5 {
+    @apply text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl;
   }
-  h6{
-    @apply text-lg font-thin
+  h6 {
+    @apply text-lg font-light;
   }
-  p{
-    @apply text-xl text-start
+  p {
+    @apply text-xl text-start;
   }
 
-  th{
-    @apply bg-tableHead text-start
+  th {
+    @apply bg-tableHead text-start;
   }
-  td,th{
-    @apply p-3
+  td,
+  th {
+    @apply p-3;
   }
-  td:last-child,th:last-child{
-    @apply p-3 border-l-8 border-white
+  td:last-child,
+  th:last-child {
+    @apply p-3 border-l-8 border-white;
   }
-  
-  table{
-    @apply w-full
+
+  table {
+    @apply w-full;
   }
 }
