--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ body {
     @apply text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl;
   }
   h4 {
-    @apply text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl;
+    @apply font-bold text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl;
   }
   h5 {
     @apply text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl;
