--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -21,7 +20,6 @@
 }
 
 body {
-
 }
 
 .navigation-wrapper {
@@ -47,8 +45,6 @@ body {
   right: 5px;
 }
 
-
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -66,16 +62,20 @@ body {
     @apply text-3xl;
   }
   h3 {
-    @apply text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl;
+    @apply font-bold text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl;
+    /* @apply text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl; */
   }
   h4 {
-    @apply font-bold text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl;
+    @apply text-4xl sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl;
+    /* @apply font-bold text-lg sm:text-xl md:text-lg lg:text-xl xl:text-2xl; */
   }
   h5 {
-    @apply text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl;
+    @apply font-bold text-lg md:text-xl;
+    /* @apply text-lg sm:text-lg md:text-xl lg:text-xl xl:text-xl; */
   }
   h6 {
-    @apply text-lg font-light;
+    @apply font-light text-xl ;
+    /* @apply text-lg font-light; */
   }
   p {
     @apply text-lg text-start;
@@ -97,11 +97,10 @@ body {
     @apply w-full;
   }
 
-  .arrow{
-    @apply fill-primary-100
+  .arrow {
+    @apply fill-primary-100;
   }
   .arrow--disabled {
-  @apply opacity-50
-}
-
+    @apply opacity-50;
+  }
 }
